--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width">
-    <title>Adolacamp 2022</title>
+    <title class="titulo">Adolacamp 2022</title>
     <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
     <div class="link-bio">
         <img src="adolacamp.jpg" alt="perfil">
-        <h1>ADOLACAMP 2022</h1>
+        <h1 class="titulo">ADOLACAMP 2022</h1>
         <a href="https://drive.google.com/drive/u/1/folders/1KnKORlcNdGi0EDAUL5ceXiACxHh66b3S">Fotos</a>
         <a href="https://drive.google.com/drive/u/1/folders/1SFXW0OD1lvqHKfMFKuJbSJCncLfBVMyi">Vídeos</a>
     </div>
