--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
     <div class="link-bio">
         <img src="adolacamp.jpg" alt="perfil">
         <h1 class="titulo">ADOLACAMP 2022</h1>
-        <a href="https://drive.google.com/drive/u/1/folders/1KnKORlcNdGi0EDAUL5ceXiACxHh66b3S">Fotos</a>
-        <a href="https://drive.google.com/drive/u/1/folders/1SFXW0OD1lvqHKfMFKuJbSJCncLfBVMyi">Vídeos</a>
+        <a href="https://drive.google.com/drive/u/1/folders/1KnKORlcNdGi0EDAUL5ceXiACxHh66b3S">Mídias</a>
     </div>
 
 </body>
