--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 <body>
     <div class="link-bio">
         <img src="adolacamp.jpg" alt="perfil">
-        <h1 class="titulo">ADOLACAMP 2022</h1>
-        <a href="https://drive.google.com/drive/u/1/folders/1KnKORlcNdGi0EDAUL5ceXiACxHh66b3S">Mídias</a>
+        <h1 class="titulo">ADOLACAMP 2022 * Mídias</h1>
+        <a href="https://drive.google.com/drive/u/0/folders/1PjQINZzSRW5tEHWh9qGWpOM7OF1Ut6Ey">Urgência</a>
+        <a href="https://drive.google.com/drive/u/0/folders/1uqv34KP2DHPWqBtrrci25VQRhqs6dHCe">Persistência e Resistência</a>
+        <a href="https://drive.google.com/drive/u/0/folders/1IZ_h77pDTbBSCDB2f1bEXOe7stBxknpN">Reconciliação</a>
     </div>
 
 </body>
