--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <div class="link-bio">
         <img src="adolacamp.jpg" alt="perfil">
         <h1 class="titulo">ADOLACAMP 2022 Midias</h1>
-        <a class="titulo" href="https://drive.google.com/drive/u/0/folders/1PjQINZzSRW5tEHWh9qGWpOM7OF1Ut6Ey">Urgencia</a>
-        <a class="titulo" href="https://drive.google.com/drive/u/0/folders/1uqv34KP2DHPWqBtrrci25VQRhqs6dHCe">Persistencia e Resistencia</a>
-        <a class="titulo" href="https://drive.google.com/drive/u/0/folders/1IZ_h77pDTbBSCDB2f1bEXOe7stBxknpN">Reconciliacao</a>
-        <a class="titulo" href="https://drive.google.com/drive/u/0/folders/13Iv0rzqgntouvSP0RPD-eBwj1LY6gDVD">Celebracao e Frutificacao</a>
-        <a class="titulo" href="https://drive.google.com/drive/u/0/folders/1fFjhUuTAFSvPNLYIqH52MrETafGCbyDm">POS ADOLA</a>
+        <a class="titulo" href="https://drive.google.com/drive/u/0/folders/1PjQINZzSRW5tEHWh9qGWpOM7OF1Ut6Ey" target="_blank">Urgencia</a>
+        <a class="titulo" href="https://drive.google.com/drive/u/0/folders/1uqv34KP2DHPWqBtrrci25VQRhqs6dHCe" target="_blank">Persistencia e Resistencia</a>
+        <a class="titulo" href="https://drive.google.com/drive/u/0/folders/1IZ_h77pDTbBSCDB2f1bEXOe7stBxknpN" target="_blank">Reconciliacao</a>
+        <a class="titulo" href="https://drive.google.com/drive/u/0/folders/13Iv0rzqgntouvSP0RPD-eBwj1LY6gDVD" target="_blank">Celebracao e Frutificacao</a>
+        <a class="titulo" href="https://drive.google.com/drive/u/0/folders/1fFjhUuTAFSvPNLYIqH52MrETafGCbyDm" target="_blank">POS ADOLA</a>
     </div>
 
 </body>
